# rust

./: .env  .gitignore  Cargo.toml  README.md  main.rs
src/: .env.rs  ?.rs  advanced-closures.rs  advanced-match.rs  arc.rs  array&tuple.rs  array.rs  arrays-&-slices.rs  async-await.rs  basics.rs  bidirectional-channels.rs  bill-management-project.rs  bill-management-system.rs  channels-bidirectional.rs  channels.rs  closure.rs  closures-advanced.rs  closures.rs  comments.rs  conditionals.rs  const.rs  control-flow.rs  copy-vs-clone.rs  crates.rs  custom-error.rs  custom-errors.rs  data-types.rs  datetime.rs  deadlock.rs  debug.rs  default-trait.rs  default.rs  derive.rs  derives.rs  directives.rs  documentation.rs  dotenvy.rs  emums.rs  enum.rs  enums-equality.rs  (+129 more)
src/deadlocks/: example1.rs  example2.rs
src/lib/: _impl.rs  codec.rs  lib.rs  mod.rs  transcode.rs  video.rs
src/lib/audio/: flac.rs
src/lib/codec/audio/: mp3.rs
src/lib/codec/video/: h264.rs
src/lib/codecs/: mod.rs
src/lib/codecs/audio/: mod.rs  mp3.rs
src/lib/codecs/video/: mod.rs  mp4.rs
src/lib/video/: webm.rs
src/libs/: db.rs
src/orders/: mod.rs
src/orders/shipping/: mod.rs
src/patterns/: typestate-pattern.rs
