[package]
name = "practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.12"
parking_lot = "0.12.1"
rand = "0.8.5"
thiserror = "1.0.58"

[[bin]]
name = "practice"
path = "main.rs"

[lib]
name = "lib"
path = "./src/lib/mod.rs"
