[package]
name = "practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
crossbeam-channel = "0.5.12"
dotenvy = "0.15.7"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"

[lib]
name = "lib"
path = "./src/lib/mod.rs"

# [[bin]]
# name = "practice"
# path = "main.rs"
