[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
backoff = "0.4.0"
crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"
rand = "0.9.2"
serde = { "version" = "1.0.228", "features" = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { "version" = "1.48.0", "features" = ["full"] }

[lib]
name = "lib"
path = "src/lib/mod.rs"
